--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
+<style>
+  .jumbotron{
+    background-image: url("belly_button_bacteria.jpg");
+    background-size: contain;
+    color: darkblue;
+    font-family: Copperplate, Papyrus, fantasy;
+  }
+
+  body {
+    background-image: url('bellybutton1.jpg');
+  }
+</style>
+
 <body>
 
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1><b> Belly Button Biodiversity Dashboard</b></h1>
+        <p style= "background-color: bisque;"> Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
