--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="charts.js"></script>
 
+  <div>    
+      <img src="bacteria2.jpg" class="ribbon" id="right">
+      </img>
+  </div>
 </body>
 
 </html>
